tests/errors/list_type_mismatch_multiplication.sp
# This should fail: mixing String and Int lists in multiplication
pub result = [] * ["foo"] * [3]